--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^3.0.1
   slidable_button: ^2.0.0+1
 
+#Audio dependecies
+  audioplayers: ^3.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,16 +59,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
   assets:
     - google_fonts/
+    - audio/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
